WebHelpers ChangeLog

0.2.3 (**svn**)
* WARNING: Due to a typo, the Text helper highlight function no longer
  highlights text with the CSS class name 'hilight' by default: it now uses the
  CSS class name 'highlight' instead. The function's 'hilighter' keyword
  argument has also been deprecated, use 'highlighter' instead.
* Sync'd Urls helper to 6070.
* Sync'd Text helper to 6096.
* Sync'd Date helper to 6080.
* Sync'd Tags helper to 5857.
* Sync'd Asset tag helper to 6057.
* Sync'd Rails Number helper to 6045.
* Updated Ajax commands to internally use 'with_' to avoid name conflicts with
  Python 2.5 and beyond. Reported by anilj. Fixes #190.
* Applied patch from David Smith to decude URL parts as Routes does.
  Fixes #186.
* Changed pagination to give better response if its passed an invalid object.
  Patch from Christoph Haas.
* Fixed scriptaculous helper docs example. Fixes #178.
* Updated scriptaculous/prototype to Prototype 1.5.0 and Scriptaculous 1.7.0.
* Updated scriptaculous javascripts to 1.6.5. Fixes #155.
* Updated remote_function doc-string to more clearly indicate the arguments
  it can recieve.
* Synced Rails Javascript helper to 5245 (escape_javascript now escaping
  backslashes and allow passing html_options to javascript_tag).

0.2.2 (10/20/06)
* Fixed tag_options function to not str() string and let html_escape handle
  it so unicode is properly handled. Reported with fix by Michael G. Noll.
* Added sqlalchemy.Query support to the pagination orm wrappers, patch from
  Andrija Zarić
* Fixed python 2.3 compliance in webhelpers.rails (use of sorted()) (Thanks
  Jamie Wilkinson)

0.2.1 (9/7/06)
* Adding counter func to text helpers, patch from Jamie Wilkinson.
* Sync'd Rails Text helper to 4994.
* Sync'd Rails Asset tag helper to 4999.
* Sync'd Rails Form tag helper to 5045, also doesn't apply to our version.
* Sync'd Rails Javascript func to 5039, doesn't apply to us.
* Updated Scriptaculous to 1.6.3.
* Updated Prototype to 1.5.0_rc1.